[package]
name = "iced-guide-examples"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
    "blocking-code-tokio",
    "blocking-code-oneshot",
    "custom-component",
    "custom-task",
    "quickstart",
    "subscription-listen-to-events",
    "app-structure",
    "save-dialog",
    "image-load-dialog",
]

[workspace.dependencies]
iced = { version = "0.13.1", features = ["tokio", "lazy", "image"] }
rfd = "0.15"
